# senseibox-kpi

./: .gitignore  CONTRIBUTING.md  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
src/system_dashboard/: __init__.py  app.py  metrics.py
static/: dashboard.js  index.html  styles.css
systemd/: senseibox-kpi.service  system-dashboard.service
tests/: test_app.py  test_metrics.py
