[project]
name = "system-dashboard"
version = "0.1.0"
description = "A small Linux system telemetry dashboard with REST APIs and WebSocket updates."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "starlette>=0.37,<1.0",
  "uvicorn[standard]>=0.29,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8,<9",
]

[project.scripts]
system-dashboard = "system_dashboard.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/system_dashboard"]
